Turn action links to buttons. Wrap by boxed layout admin/categories/{index/show} views. Fix admin categories management step

--- a/app/assets/stylesheets/admin/application.less
+++ b/app/assets/stylesheets/admin/application.less
@@ -4,6 +4,13 @@
 * = require "admin/theme"
 */
 
+a[class^="icon-"] {
+  color: gray;
+  &:hover { text-decoration: none; color: darken(gray, 20%) }
+}
+
 .bs-docs-sidenav {
   max-width: 300px;
 }
+
+.block .block-content { padding-left: 5px; }
